Fixed post-meta image on mobile devices

--- a/_less/article.less
+++ b/_less/article.less
@@ -196,10 +196,7 @@
     border-radius: 50%;
     max-width: 30px;
     margin-right: .5em;
-    @media screen and (max-width: 520px) {
-      max-width: 75%;
-      margin: (@stjerneman-gutter / 2) auto;
-    }
+    
   }
   h4 {
     margin-bottom: .5em;
